# ktoken

./: .gitignore  Cargo.toml  README.md  build.sh
defi/: Cargo.toml
defi/src/: lib.rs
ft/src/: lib.rs
kt/: Cargo.toml
kt/src/: asset.rs  ft.rs  lib.rs  oracle.rs  owner.rs  price.rs  treasury.rs
neardev/: dev-account  dev-account.env
res/: .gitignore
test-contract-ft/: Cargo.toml
test-contract-ft/src/: lib.rs
test-contract-oracle/: Cargo.toml
test-contract-oracle/src/: lib.rs
tests/: workspaces.rs
