[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.60"
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0.83"
tokio = {version = "1.20.1", features = ["full"]}
workspaces = "0.4.0"

kt = { path = "kt" }
ft = { path = "test-contract-ft" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
  "kt",
  "test-contract-ft",
]
